--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+*.pyc
 .idea
+.ipynb_checkpoints
+__pycache__
+
+
+# ignore pydev projects
+/.project
+/.pydevproject
+
+# obviously no .bak
+*.bak
