--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 *.pyc
-.idea
+
+# User-specific stuff:
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
 
 .ipynb_checkpoints
 
