--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 .idea/tasks.xml
 .idea/dictionaries
 .idea/vcs.xml
+.idea/misc.xml
+.idea/modules.xml
 .idea/jsLibraryMappings.xml
 
 .ipynb_checkpoints
